# youtube-transcript

./: README.md  pyproject.toml
src/youtube_transcript/: main.py
src/youtube_transcript/api/: __init__.py  youtube.py
src/youtube_transcript/schemas/: __init__.py  youtube_schema.py
src/youtube_transcript/service/: __init__.py  trascript_youtube.py
