[project]
name = "youtube-transcript"
version = "0.1.0"
description = ""
authors = [
    {name = "JuanPinheiroFIAP",email = "rm552202@fiap.com.br"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "youtube-transcript-api (==1.2.4)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]

[tool.poetry]
packages = [{include = "youtube_transcript", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
